# hwiclient

./: .gitignore  NOTICE  README.md  pyproject.toml  setup.py
hwiclient/: __init__.py  bus.py  commands.py  connection.py  device.py  dimmer.py  events.py  fan.py  homeworks.py  hub.py  keypad.py  keypadstore.py  legconnection.py  light.py  models.py  monitoring.py  parser.py  repos.py  responsehandler.py  shade.py  switch.py  telnet.py  utils.py
hwiclient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hwiclient/commands/: dimmer.py  hub.py  keypad.py  queue.py  sender.py  system.py
hwiclient/connection/: adapter.py  coordinator.py  listener.py  login.py  message.py  packets.py  protocol.py  session.py  state.py  stream.py  tcp.py  tcpclient.py  thread.py  watcher.py
tests/: test_events.py  test_homeworks.py  test_monitoring.py  test_utils.py
tests/commands/: test_dimmer.py
tests/connection/: test_adapter.py  test_packets.py
