[project]
name = "hwiclient"
version = "1.0.1"
description = ""
authors = [
    {name = "Bailey Seymour",email = "bailey@baileyseymour.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.6"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
